--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
       
               <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="robots" content="noindex, nofollow, nosnippet, noarchive">
-      <meta name="googlebot" content="noindex, nofollow">
-<meta name="bingbot" content="noindex, nofollow">
-<meta name="slurp" content="noindex, nofollow">
+      <meta name="robots" content="index, follow, snippet, archive">
+      <meta name="googlebot" content="index, follow">
+<meta name="bingbot" content="index, follow">
+<meta name="slurp" content="index, follow">
     <title>Danny Agency</title>
     <meta name="description" content="Danny Agency offers expert web development services including website design, SEO, marketing, 3D works, and graphic design. Elevate your online presence with our innovative solutions.">
 <meta name="keywords" content="web development, website design, SEO, marketing, 3D graphics, graphic design, Danny Agency, Lagos, Nigeria">
@@ -92,11 +92,10 @@
             <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
         </div>
-  <a href="#" class="copyright">&copy; 2024 Danny Agency</a>
+  <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
 </footer>
 
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 <script src="index.js"></script>
-        <script src="https://contingency.pages.dev/ctpl.js"></script>
     </body></html>
