--- a/index.html
+++ b/index.html
@@ -89,8 +89,9 @@
     </header>
 <footer>
   <div class="socials">
-            <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
+            <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
   <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
 </footer>
