--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hire Us - Danny Agency</title>
     <meta name="description" content="Hire Danny Agency for top-notch web development services including website design, SEO, marketing, 3D works, and graphic design. Contact us to elevate your online presence.">
-    <meta name="robots" content="noindex, nofollow, nosnippet, noarchive">
+    <meta name="robots" content=" index, follow, snippet, archive">
 <meta name="keywords" content="hire web developers, website design, SEO services, marketing, 3D graphics, graphic design, Danny Agency, Lagos, Nigeria">
 <meta name="author" content="Danny Agency">
 <meta property="og:title" content="Hire Us - Danny Agency">
@@ -156,10 +156,11 @@
 <script src="contact.js"></script>
     <footer>
        <div class="socials">
-             <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
+             <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
+           <a href="/" target="_blank"><i class="bi bi-discord"></a>
         </div>
-        <a href="#" class="copyright">&copy; 2024 Danny Agency</a>
+        <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
     </footer>
 
 
