--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="web development, website design, SEO, marketing, 3D graphics, graphic design, Lagos, Nigeria, Danny Agency">
     <meta name="author" content="Danny Agency">
     <meta property="og:title" content="About Us - Danny Agency">
-    <meta name="robots" content="noindex, nofollow, nosnippet, noarchive">
+    <meta name="robots" content="index, follow, snippet, archive">
     <meta property="og:description" content="Danny Agency is a top web development agency creating stunning, responsive websites. Our services include website design, SEO, marketing, 3D works, and graphic design.">
     <meta property="og:image" content="logo.png">
     <meta property="og:url" content="https://www.danny-agency.com/about.html">
@@ -122,7 +122,7 @@
              <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
         </div>
-  <a href="#" class="copyright">&copy; 2024 Danny Agency</a>
+  <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
 </footer>
 
 </body>
