--- a/about.html
+++ b/about.html
@@ -48,8 +48,9 @@
             <li><a href="faqs.html">FAQs</a></li>
         <br>
          <div class="socials">
-             <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
+             <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
+              <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
         </ul>
 </nav>
@@ -71,12 +72,13 @@
         <div class="location-details">
             <h1>Find us <i class="bi bi-geo"></i></h1>
             <p><b>Location:</b> Lagos, Nigeria</p>
-            <p><b>Email:</b> <a href="mailto:contact@danny-agency.com">contact@danny-agency.com</a></p>
-            <p><b>Phone:</b> <a href="tel:+2349012940205">+234 901 2940 205</a></p>
+            <p><b>Email:</b> <a href="mailto:dannyagency98@gmail.com">contact@danny-agency.com</a></p>
+            <p><b>Phone:</b> <a href="tel:+2348165241774">+234 816 5241 774</a></p>
             <div class="about-socials">
               <p>Socials:</p>
-              <a href="https://instagram.com/dharniel_developer_" target="_blank"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.tiktok.com/@dharniel_developer_" target="_blank"><i class="bi bi-tiktok"></i></a>
+              <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
+                <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
             </div>
         </div>
         </div>
@@ -119,8 +121,9 @@
     <script src="about.js"></script>
 <footer>
 <div class="socials">
-             <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
+             <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
+         <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
   <a href="#" class="copyright">&copy; 2025 Danny Agency</a>
 </footer>
