--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,9 @@
             <li><a href="faqs.html">FAQs</a></li>
            <br>
             <div class="socials">
-            <a href="https://instagram.com/danny_agency_" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="https://instagram.com/dannyagency" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.tiktok.com/@danny_agency_" target="_blank"><i class="bi bi-tiktok"></i></a>
+                 <a href="/" target="_blank"><i class="bi bi-discord"></i></a>
         </div>
         </ul>
     </nav>
