--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
         <img src="logo.png" alt="Logo" class="logo" loading="lazy">
         <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
        <ul>
-          <li><a class="grad-text" href="/">Home</a></li>
+          <li><a class="grad-text" href="index.html">Home</a></li>
             <li><a class="current" href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
