--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
         <img src="https://firebasestorage.googleapis.com/v0/b/octen-29d12.appspot.com/o/presentations%2FUl5d1%2FchatImages%2F1721687289086_my_logo-removebg-preview.png?alt=media&token=33360df2-8425-4642-9867-209bee52f72e" alt="Logo" class="logo">
         <a href="login.html" class="login current"><i class="fa fa-user-circle"></i>Login</a>
        <ul>
-          <li><a class="grad-text" href="/">Home</a></li>
+          <li><a class="grad-text" href="index.html">Home</a></li>
             <li><a class="grad-text" href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
