--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
        
     <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
         <ul>
-          <li><a class="current" href="/">Home</a></li>
+          <li><a class="current" href="index.html">Home</a></li>
             <li><a class="grad-text" href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
