--- a/index.html
+++ b/index.html
@@ -101,4 +101,21 @@
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 
 <script src="index.js"></script>
+          <script>
+               // Counting effect
+  let count = 0;
+  const counter = document.querySelector('.count');
+  const preloader = document.querySelector('.preloader');
+
+  const interval = setInterval(() => {
+    count++;
+    counter.textContent = count + '%';
+    if (count >= 100) {
+      clearInterval(interval);
+      // Fade out when complete
+      preloader.classList.add('fade-out');
+      setTimeout(() => preloader.remove(), 1000);
+    }
+  }, 20); // Adjust speed: lower = faster
+          </script>
     </body></html>
