--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <div>
             <h1 id="fadeInText">Transforming visions into<br> digital reality</h1>
            <div class="link-wrap">
-                <a href="/contact.html">Hire us <i class="bi bi-person-workspace"></i></a>
-            <a href="/portfolio.html">Portfolio <i class="bi bi-briefcase"></i></a>
+                <a href="contact.html">Hire us <i class="bi bi-person-workspace"></i></a>
+            <a href="portfolio.html">Portfolio <i class="bi bi-briefcase"></i></a>
            </div>
         </div>
         <div class="image-container">
