--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <div class="image-container">
            <model-viewer 
-        src="./logo-r.glb" 
+        src=".logo-r.glb" 
         alt="A 3D model" 
         background-color="#f25"
         orientation="0 1 0 90deg"
