--- a/index.html
+++ b/index.html
@@ -332,8 +332,10 @@ nav ul li a {
     justify-content: center;
 }
 nav .active:hover {
-  transform: scale(0.9) !important;
+   background-color: #949494;
+   background-image: linear-gradient(315deg, #949494 0%, #a7a7a7 74%);
   color: #000 !important;
+  border: 1px solid #f1f2f6;
 }
 .logo {
   width: 2em;
@@ -477,7 +479,7 @@ nav .socials {
   .circle {
     width: min(200px, 40vw);
     height: min(200px, 40vw);
-    border: 4px solid #fff;
+    border: 2px solid #fff;
     border-radius: 50%;
     display: flex;
     justify-content: center;
