--- a/index.html
+++ b/index.html
@@ -206,12 +206,7 @@ header a {
     text-decoration: none;
     border-radius: 9999px;
 }
-header a:first-child:hover {
-transform: translateX(-2%);
-}
-header a:hover {
-transform: translateX(2%);
-}
+
 
 
 .link-wrap {
@@ -332,10 +327,10 @@ nav ul li a {
     justify-content: center;
 }
 nav .active:hover {
-   background-color: #949494;
-   background-image: linear-gradient(315deg, #949494 0%, #a7a7a7 74%);
+   background-color: #f1f2f6;
+   background-image: linear-gradient(315deg, #f1f2f6 0%, #e8e8e8 74%);
   color: #000 !important;
-  border: 1px solid #f1f2f6;
+  border: 1px solid #000000;
 }
 .logo {
   width: 2em;
