--- a/index.html
+++ b/index.html
@@ -173,6 +173,12 @@ body, html {
 }
         }
 
+header a:first-child:hover {
+transform: translateX(-2%);
+}
+header a:hover {
+transform: translateX(2%);
+}
 
 .header {
     display: flex;
@@ -327,10 +333,8 @@ nav ul li a {
     justify-content: center;
 }
 nav .active:hover {
-   background-color: #f1f2f6;
-   background-image: linear-gradient(315deg, #f1f2f6 0%, #e8e8e8 74%);
+  transform: scale(0.9) !important;
   color: #000 !important;
-  border: 1px solid #000000;
 }
 .logo {
   width: 2em;
