--- a/portfolio.html
+++ b/portfolio.html
@@ -538,12 +538,12 @@ nav .socials {
         <img src="heatculture.jpg" alt="heatculture Logo" loading="lazy">
         <span class="tag">Clothing brand</span>
         <h2>WTFlex</h2>
-        <a href="https://www.heatculture.in/" target="_blank" class="site">wtflex.in</a>
-        <p>WHAT THE FLEX is a streetwear fashion brand redefining culture.</p>
+        <a href="https://www.heatculture.in/" target="_blank" class="site">heatculture.in</a>
+        <p> Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
         <div class="meta">
           <span class="year">2022</span>
           <a href="https://www.heatculture.in/" target="_blank" class="share">
-            <i class="fa-solid fa-share-from-square"></i>
+            <i class="fa-solid fa-globe"></i>
           </a>
         </div>
       </div>
