--- a/portfolio.html
+++ b/portfolio.html
@@ -535,9 +535,9 @@ nav .socials {
 
       <!-- WTFlex -->
       <div class="card" style="--card-color:#e9f7f7;">
-        <img src="heatculture.jpg" alt="heatculture Logo" loading="lazy">
+        <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="heatculture Logo" loading="lazy">
         <span class="tag">Clothing brand</span>
-        <h2>WTFlex</h2>
+        <h2>HEAT CULTURE</h2>
         <a href="https://www.heatculture.in/" target="_blank" class="site">heatculture.in</a>
         <p> Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
         <div class="meta">
