--- a/portfolio.html
+++ b/portfolio.html
@@ -537,7 +537,7 @@ nav .socials {
     <section>
 
       <!-- WTFlex -->
-      <div class="card" style="--card-color:#e9f7f7;">
+      <div class="card" style="--card-color:#cfcfcf;">
         <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/bg_black_1_1.png?v=1727872683" alt="heatculture Logo" loading="lazy">
         <span class="tag">Clothing brand</span>
         <h2>HEAT CULTURE</h2>
@@ -552,7 +552,7 @@ nav .socials {
       </div>
 
       <!-- Kwabey -->
-      <div class="card" style="--card-color:#f1ebfb;">
+      <div class="card" style="--card-color:#f4f4f4;">
         <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
         <span class="tag">Comic series</span>
         <h2>SAHARAN ROCKIN</h2>
@@ -567,7 +567,7 @@ nav .socials {
       </div>
 
       <!-- Main Character India -->
-      <div class="card" style="--card-color:#f2faf2;">
+      <div class="card" style="--card-color:#cfcfcf;">
         <img src="https://cdn.shopify.com/s/files/1/0643/4966/7573/files/Logo_black.png?v=1652407372" alt="anotherstate" loading="lazy">
         <span class="tag">Fashion & Lifestyle</span>
         <h2>Main Character India</h2>
