--- a/portfolio.html
+++ b/portfolio.html
@@ -81,10 +81,8 @@ body, html {
 
 .card:hover {
   transform: translateY(-6px);
-  box-shadow:
-    0 0 25px 5px rgba(180, 180, 180, 0.3),  /* ash glow */
-    0 8px 20px rgba(0, 0, 0, 0.05);         /* subtle depth */
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 0 15px 5px rgba(200, 200, 200, 0.4), 
+              0 0 30px 10px rgba(200, 200, 200, 0.2);
 }
 
 .card img {
