--- a/portfolio.html
+++ b/portfolio.html
@@ -536,16 +536,13 @@ nav .socials {
 
       <!-- WTFlex -->
       <div class="card" style="--card-color:#cfcfcf;">
-        <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/bg_black_1_1.png?v=1727872683" alt="heatculture Logo" loading="lazy">
+        <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
         <span class="tag">Clothing brand</span>
         <h2>HEAT CULTURE</h2>
-        <a href="https://www.heatculture.in/" target="_blank" class="site">heatculture.in</a>
+        <i class="fa-solid fa-calendar" style="position: relative; font-size: 48px;"> </i><a href="https://www.heatculture.in/" target="_blank" class="site">heatculture.in</a>
         <p> Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
         <div class="meta">
           <span class="year">2024</span>
-          <a href="https://www.heatculture.in/" target="_blank" class="share">
-            <i class="fa-solid fa-globe"></i>
-          </a>
         </div>
       </div>
 
@@ -554,28 +551,22 @@ nav .socials {
         <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
         <span class="tag">Comic series</span>
         <h2>SAHARAN ROCKIN</h2>
-        <a href="https://www.saharanrockin.com/" target="_blank" class="site">saharanockin.com</a>
+       <i class="fa-solid fa-calendar" style="position: relative; font-size: 48px;"></i> <a href="https://www.saharanrockin.com/" target="_blank" class="site">saharanockin.com</a>
         <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
         <div class="meta">
           <span class="year">2025</span>
-          <a href="https://www.saharanrockin.com/" target="_blank" class="share">
-            <i class="fa-solid fa-globe"></i>
-          </a>
         </div>
       </div>
 
       <!-- Main Character India -->
       <div class="card" style="--card-color:#cfcfcf;">
-        <img src="https://cdn.shopify.com/s/files/1/0643/4966/7573/files/Logo_black.png?v=1652407372" alt="anotherstate" loading="lazy">
+        <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
         <span class="tag">Fashion & Lifestyle</span>
         <h2>Main Character India</h2>
-        <a href="https://www.anotherstate.net/" target="_blank" class="site">anotherstate.net</a>
+       <i class="fa-solid fa-calendar" style="position: relative; font-size: 48px;"></i> <a href="https://www.anotherstate.net/" target="_blank" class="site">anotherstate.net</a>
         <p>An encounter of states conveyed through garments.</p>
         <div class="meta">
           <span class="year">2024</span>
-          <a href="https://www.anotherstate.net/" target="_blank" class="share">
-            <i class="fa-solid fa-globe"></i>
-          </a>
         </div>
       </div>
 
