--- a/portfolio.html
+++ b/portfolio.html
@@ -531,7 +531,7 @@ nav .socials {
     </nav>
 
   <div class="websites product">
-    <h1>Clothing Brand Websites</h1>
+    <h1>Featured Projects</h1>
     <section>
 
       <!-- WTFlex -->
