--- a/portfolio.html
+++ b/portfolio.html
@@ -539,7 +539,7 @@ nav .socials {
 
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#cfcfcf;">
+    <div class="card" style="--card-color:#d4fae5;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
       <span class="tag">Clothing brand</span>
       <h2>HEAT CULTURE</h2>
@@ -562,7 +562,7 @@ nav .socials {
 
   <!-- SAHARAN ROCKIN -->
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#f4f4f4;">
+    <div class="card" style="--card-color:#ffd4ed;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
       <span class="tag">Comic series</span>
       <h2>SAHARAN ROCKIN</h2>
@@ -585,7 +585,7 @@ nav .socials {
 
   <!-- MAIN CHARACTER INDIA -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#cfcfcf;">
+    <div class="card" style="--card-color:#ffffff;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
       <span class="tag">Fashion & Lifestyle</span>
       <h2>Main Character India</h2>
