--- a/portfolio.html
+++ b/portfolio.html
@@ -77,6 +77,7 @@ body, html {
   align-items: flex-start;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  height: 50%;
 }
 
 .card:hover {
@@ -149,7 +150,6 @@ body, html {
   .card {
     width: 90%;
     flex: 1 1 calc(50% - 2em); /* 2 per row on tablet */
-    max-width: calc(50% - 2em);
   }
 }
 
