--- a/portfolio.html
+++ b/portfolio.html
@@ -145,6 +145,12 @@ body, html {
   color: #000;
 }
 
+  .card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+  }
+
 /* Responsive */
 @media (max-width: 768px) {
   .card {
@@ -537,75 +543,72 @@ nav .socials {
      <!-- Works Section -->
 <section class="works">
 
+
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#d4fae5;">
+    <div class="card" style="--card-color:#cfcfcf;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
+      <div class="meta">
+        <span class="year">2024</span>
+        <i class="fa-solid fa-calendar"></i>
+      </div>
       <span class="tag">Clothing brand</span>
       <h2>HEAT CULTURE</h2>
 
       <div class="link-row">
         <a href="https://www.heatculture.in/" target="_blank" class="site">
           heatculture.in
-          <i class="fa-solid fa-square-share-nodes"></i>
+          <i class="fa-solid fa-share-square"></i>
         </a>
       </div>
 
       <p>Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
-
-      <div class="meta">
-        <span class="year">2024</span>
-        <i class="fa-solid fa-calendar" style="margin-left: 6px; transform: rotate(180deg);"></i>
-      </div>
     </div>
   </a>
 
   <!-- SAHARAN ROCKIN -->
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#ffd4ed;">
+    <div class="card" style="--card-color:#f4f4f4;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
+      <div class="meta">
+        <span class="year">2025</span>
+        <i class="fa-solid fa-calendar"></i>
+      </div>
       <span class="tag">Comic series</span>
       <h2>SAHARAN ROCKIN</h2>
 
       <div class="link-row">
         <a href="https://www.saharanrockin.com/" target="_blank" class="site">
           saharanrockin.com
-          <i class="fa-solid fa-square-share-nodes"></i>
+          <i class="fa-solid fa-share-square"></i>
         </a>
       </div>
 
       <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
-
-      <div class="meta">
-        <span class="year">2025</span>
-        <i class="fa-solid fa-calendar" style="margin-left: 6px; transform: rotate(180deg);"></i>
-      </div>
     </div>
   </a>
 
   <!-- MAIN CHARACTER INDIA -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#ffffff;">
+    <div class="card" style="--card-color:#cfcfcf;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
+      <div class="meta">
+        <span class="year">2024</span>
+        <i class="fa-solid fa-calendar"></i>
+      </div>
       <span class="tag">Fashion & Lifestyle</span>
       <h2>Main Character India</h2>
 
       <div class="link-row">
         <a href="https://www.anotherstate.net/" target="_blank" class="site">
           anotherstate.net
-          <i class="fa-solid fa-square-share-nodes"></i>
+          <i class="fa-solid fa-share-square"></i>
         </a>
       </div>
 
       <p>An encounter of states conveyed through garments.</p>
-
-      <div class="meta">
-        <span class="year">2024</span>
-        <i class="fa-solid fa-calendar" style="margin-left: 6px; transform: rotate(180deg);"></i>
-      </div>
     </div>
   </a>
-
 
   
     <footer>
