--- a/login.html
+++ b/login.html
@@ -421,7 +421,7 @@ nav .socials {
     </nav>
    <div class="form-wrap">
    <form id="loginForm" autocomplete="false">
-     <h1>Sign In</h1>
+     <h1>SIGN IN</h1>
      <p>Sign in to your account to continue</p>
      <br>
      <div class="wrap">
