--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@ body, html {
   align-items: flex-start;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 50%;
+  height: 100%;
 }
 
 .card:hover {
@@ -149,6 +149,9 @@ body, html {
     text-decoration: none;
     color: inherit;
     display: block;
+  }
+    .link-row {
+    margin: 8px 0 12px;
   }
 
 /* Responsive */
@@ -512,7 +515,9 @@ nav .socials {
       opacity: 0;
     }
   }
-
+h2 {
+  font-size: 2em;
+}
     </style>
     <nav>
         <input type="checkbox" id="click">
@@ -537,7 +542,7 @@ nav .socials {
     </nav>
 
   <div class="websites product">
-    <h1>Featured Projects</h1>
+    <h2>Featured Projects</h2>
     <section>
 
      <!-- Works Section -->
