--- a/portfolio.html
+++ b/portfolio.html
@@ -551,7 +551,7 @@ h2 {
 
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#cfcfcf;">
+    <div class="card" style="--card-color:#fafffc;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
       <div class="meta">
         <span class="year">2024</span>
@@ -561,9 +561,9 @@ h2 {
       <h2>HEAT CULTURE</h2>
 
       <div class="link-row">
+        <i class="fa-solid fa-share-square"></i>
         <a href="https://www.heatculture.in/" target="_blank" class="site">
           heatculture.in
-          <i class="fa-solid fa-share-square"></i>
         </a>
       </div>
 
@@ -573,7 +573,7 @@ h2 {
 
   <!-- SAHARAN ROCKIN -->
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#f4f4f4;">
+    <div class="card" style="--card-color:#fedff9;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
       <div class="meta">
         <span class="year">2025</span>
@@ -583,9 +583,9 @@ h2 {
       <h2>SAHARAN ROCKIN</h2>
 
       <div class="link-row">
+        <i class="fa-solid fa-share-square"></i>
         <a href="https://www.saharanrockin.com/" target="_blank" class="site">
-          saharanrockin.com
-          <i class="fa-solid fa-share-square"></i>
+          saharanrockin.com>
         </a>
       </div>
 
@@ -595,7 +595,7 @@ h2 {
 
   <!-- MAIN CHARACTER INDIA -->
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#cfcfcf;">
+    <div class="card" style="--card-color:#ffffff;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
       <div class="meta">
         <span class="year">2024</span>
@@ -605,9 +605,9 @@ h2 {
       <h2>Main Character India</h2>
 
       <div class="link-row">
+        <i class="fa-solid fa-share-square"></i>
         <a href="https://www.anotherstate.net/" target="_blank" class="site">
           anotherstate.net
-          <i class="fa-solid fa-share-square"></i>
         </a>
       </div>
 
