--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@ body, html {
   align-items: flex-start;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 100%;
+  height: 500px;
 }
 
 .card:hover {
@@ -152,6 +152,8 @@ body, html {
   }
     .link-row {
     margin: 8px 0 12px;
+    display: flex;
+    gap: 5px;
   }
 
 /* Responsive */
@@ -553,12 +555,12 @@ h2 {
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#fafffc;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
-      <div class="meta">
-        <span class="year">2024</span>
-        <i class="fa-solid fa-calendar"></i>
-      </div>
+    
       <span class="tag">Clothing brand</span>
-      <h2>HEAT CULTURE</h2>
+      <h2>HEAT CULTURE</h2>   <div class="meta">
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2024</span>
+      </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
@@ -575,12 +577,12 @@ h2 {
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#fedff9;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
-      <div class="meta">
-        <span class="year">2025</span>
-        <i class="fa-solid fa-calendar"></i>
-      </div>
+   
       <span class="tag">Comic series</span>
-      <h2>SAHARAN ROCKIN</h2>
+      <h2>SAHARAN ROCKIN</h2>    <div class="meta">
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2025</span>
+      </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
@@ -597,12 +599,12 @@ h2 {
   <a href="https://www.anotherstate.net/" target="_blank" class="card-link">
     <div class="card" style="--card-color:#ffffff;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
-      <div class="meta">
-        <span class="year">2024</span>
-        <i class="fa-solid fa-calendar"></i>
-      </div>
+      
       <span class="tag">Fashion & Lifestyle</span>
-      <h2>Main Character India</h2>
+      <h2>Main Character India</h2>  <div class="meta">
+        <i class="fa-solid fa-calendar"></i>
+        <span class="year">2024</span>
+      </div>
 
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
