--- a/portfolio.html
+++ b/portfolio.html
@@ -553,7 +553,7 @@ h2 {
 
   <!-- HEAT CULTURE -->
   <a href="https://www.heatculture.in/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#fafffc;">
+    <div class="card" style="--card-color:#e9f8ef;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
     
       <span class="tag">Clothing brand</span>
@@ -575,7 +575,7 @@ h2 {
 
   <!-- SAHARAN ROCKIN -->
   <a href="https://www.saharanrockin.com/" target="_blank" class="card-link">
-    <div class="card" style="--card-color:#fedff9;">
+    <div class="card" style="--card-color:#fcf4fb;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
    
       <span class="tag">Comic series</span>
