--- a/login.html
+++ b/login.html
@@ -407,7 +407,7 @@ nav .socials {
         <a href="login.html" class="login current"><i class="fa fa-user-circle"></i>Login</a>
        <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
-            <li><a class="grad-text" href="portfolio.html">Portfolio</a></li>
+            <li><a class="grad-text" href="portfolio.html">Works</a></li>
             <li><a href="contact.html" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
