--- a/portfolio.html
+++ b/portfolio.html
@@ -530,7 +530,7 @@ h2 {
         <a href="login.html" class="login"><i class="fa fa-user-circle"></i>Login</a>
        <ul>
           <li><a class="grad-text" href="index.html">Home</a></li>
-            <li><a class="current" href="portfolio.html">Portfolio</a></li>
+            <li><a class="current" href="portfolio.html">Works</a></li>
             <li><a href="contact.html" class="active">Hire us</a></li>
             <li><a href="about.html">About us</a></li>
             <li><a href="faqs.html">FAQs</a></li>
@@ -587,7 +587,7 @@ h2 {
       <div class="link-row">
         <i class="fa-solid fa-share-square"></i>
         <a href="https://www.saharanrockin.com/" target="_blank" class="site">
-          saharanrockin.com>
+          saharanrockin.com
         </a>
       </div>
 
