--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,7 @@ body, html {
   align-items: flex-start;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 500px;
+  height: 550px;
 }
 
 .card:hover {
@@ -124,10 +124,11 @@ body, html {
 }
 
 .meta {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 4px;
 }
 
 .year {
@@ -159,7 +160,7 @@ body, html {
 /* Responsive */
 @media (max-width: 768px) {
   .card {
-    width: 90%;
+    width: 300px;
     flex: 1 1 calc(50% - 2em); /* 2 per row on tablet */
   }
 }
