--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,6 @@ body, html {
   align-items: flex-start;
   box-shadow: 0 4px 10px rgba(0,0,0,0.05);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 550px;
 }
 
 .card:hover {
@@ -129,6 +128,8 @@ body, html {
     justify-content: flex-end;
     align-items: center;
     gap: 4px;
+    background: transparent;
+    border: 1px solid black;
 }
 
 .year {
@@ -557,7 +558,7 @@ h2 {
     <div class="card" style="--card-color:#e9f8ef;">
       <img src="https://cdn.shopify.com/s/files/1/0738/3665/9009/files/heat_culture_no_bg_center.png?v=1728842338" alt="heatculture Logo" loading="lazy">
     
-      <span class="tag">Clothing brand</span>
+      <span class="tag" style="background: #ffffff; border: none;"> Clothing brand</span>
       <h2>HEAT CULTURE</h2>   <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -571,6 +572,7 @@ h2 {
       </div>
 
       <p>Heat Culture redefine premium streetwear with bold designs and quality craftsmanship.</p>
+        <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>   <span class="tag">SEO</span>
     </div>
   </a>
 
@@ -579,7 +581,7 @@ h2 {
     <div class="card" style="--card-color:#fcf4fb;">
       <img src="https://cdn.shopify.com/s/files/1/0665/5849/2822/files/IMG_9171.png?v=1757995982" alt="Saharan rockin" loading="lazy">
    
-      <span class="tag">Comic series</span>
+      <span class="tag"  style="background: #ffffff; border: none;">Comic series</span>
       <h2>SAHARAN ROCKIN</h2>    <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2025</span>
@@ -593,6 +595,7 @@ h2 {
       </div>
 
       <p>A surreal Y2K-inspired manga series by Saharan Rockin Studios.</p>
+         <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>   <span class="tag">SEO</span>
     </div>
   </a>
 
@@ -601,7 +604,7 @@ h2 {
     <div class="card" style="--card-color:#ffffff;">
       <img src="https://cdn.shopify.com/s/files/1/0945/2411/3199/files/Social-Sharing-Image.webp?v=1759911990" alt="anotherstate" loading="lazy">
       
-      <span class="tag">Fashion & Lifestyle</span>
+      <span class="tag"  style="background: #ffffff; border: none;">Fashion & Lifestyle</span>
       <h2>Main Character India</h2>  <div class="meta">
         <i class="fa-solid fa-calendar"></i>
         <span class="year">2024</span>
@@ -615,6 +618,7 @@ h2 {
       </div>
 
       <p>An encounter of states conveyed through garments.</p>
+              <span class="tag">Shopify</span>  <span class="tag">Theme Development</span>
     </div>
   </a>
 
